--- a/UploadWebapp.csproj
+++ b/UploadWebapp.csproj
@@ -276,6 +276,8 @@
     <Content Include="Content\fonts\icomoon.eot" />
     <Content Include="Content\fonts\icomoon.ttf" />
     <Content Include="Content\fonts\icomoon.woff" />
+    <Content Include="Content\centercalibrationtemplate.csv" />
+    <Content Include="Content\lenscalibrationtemplate.csv" />
     <None Include="Properties\PublishProfiles\UploadWebApp.pubxml" />
     <Content Include="Images\icon_home.svg" />
     <Content Include="Images\icon_home_active.png" />
