--- a/packages.config
+++ b/packages.config
@@ -13,7 +13,8 @@
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net45" />
   <package id="knockoutjs" version="2.1.0" targetFramework="net45" />
-  <package id="Magick.NET-7.0.0.18-Q16-x64" version="1.0.0" targetFramework="net45" />
+  <package id="Magick.NET.Core" version="3.0.0" targetFramework="net45" />
+  <package id="Magick.NET-Q16-AnyCPU" version="7.20.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net45" />
