--- a/UploadWebapp.csproj
+++ b/UploadWebapp.csproj
@@ -222,6 +222,7 @@
     <Compile Include="Models\Species.cs" />
     <Compile Include="Models\Submission.cs" />
     <Compile Include="Models\UploadSet.cs" />
+    <Compile Include="Models\UploadSetQualityChecksModel.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
