--- a/UploadWebapp.csproj
+++ b/UploadWebapp.csproj
@@ -9,7 +9,7 @@
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{3DFF2FE5-26DE-4EBE-B8F0-EE5B2770CEAF}</ProjectGuid>
-    <ProjectTypeGuids>{E3E379DF-F4C6-4180-9B81-6769533ABE47};{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
+    <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>UploadWebapp</RootNamespace>
@@ -424,9 +424,7 @@
     <Content Include="Views\ETC\AggregateLAI.cshtml" />
     <Content Include="Views\Dashboard\Index.cshtml" />
     <Content Include="Views\Dashboard\SensorData.cshtml" />
-    <Content Include="Views\Dashboard\CPdataBra.cshtml" />
-    <Content Include="Views\Dashboard\generateCPdataBra.cshtml" />
-    <Content Include="Views\Dashboard\DownloadDataFromCarbonPortal.cshtml" />
+    <Content Include="Views\Dashboard\generateBraInfoData.cshtml" />
     <Content Include="Scripts\jquery-3.6.3.slim.min.map" />
     <Content Include="Scripts\jquery-3.6.3.min.map" />
   </ItemGroup>
