--- a/.gitignore
+++ b/.gitignore
@@ -289,3 +289,26 @@ Web References/usersitesservice/UserData.datasource
 Web References/usersitesservice/UserSiteService.disco
 Web References/usersitesservice/UserSiteService.wsdl
 /CP
+/Content/AncillaryReports/BE-Bra_Full_Ancillary_Report.html
+/Content/AncillaryReports/BE-Vie_Full_Ancillary_Report.html
+/Content/AncillaryReports/CH-Dav_Full_Ancillary_Report.html
+/Content/AncillaryReports/CZ-BK1_Full_Ancillary_Report.html
+/Content/AncillaryReports/CZ-Lnz_Full_Ancillary_Report.html
+/Content/AncillaryReports/DE-HoH_Full_Ancillary_Report.html
+/Content/AncillaryReports/DE-Tha_Full_Ancillary_Report.html
+/Content/AncillaryReports/DK-Sor_Full_Ancillary_Report.html
+/Content/AncillaryReports/FI-Hyy_Full_Ancillary_Report.html
+/Content/AncillaryReports/FI-Sod_Full_Ancillary_Report.html
+/Content/AncillaryReports/FR-Bil_Full_Ancillary_Report.html
+/Content/AncillaryReports/FR-FBn_Full_Ancillary_Report.html
+/Content/AncillaryReports/FR-Fon_Full_Ancillary_Report.html
+/Content/AncillaryReports/FR-Hes_Full_Ancillary_Report.html
+/Content/AncillaryReports/FR-Pue_Full_Ancillary_Report.html
+/Content/AncillaryReports/IT-Cp2_Full_Ancillary_Report.html
+/Content/AncillaryReports/IT-Ren_Full_Ancillary_Report.html
+/Content/AncillaryReports/IT-SR2_Full_Ancillary_Report.html
+/Content/AncillaryReports/NL-Loo_Full_Ancillary_Report.html
+/Content/AncillaryReports/NO-Hur_Full_Ancillary_Report.html
+/Content/AncillaryReports/SE-Htm_Full_Ancillary_Report.html
+/Content/AncillaryReports/SE-Nor_Full_Ancillary_Report.html
+/Content/AncillaryReports/SE-Svb_Full_Ancillary_Report.html
