--- a/UploadWebapp.csproj
+++ b/UploadWebapp.csproj
@@ -116,6 +116,12 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.IO.Compression, Version=4.1.2.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\System.IO.Compression.4.3.0\lib\net46\System.IO.Compression.dll</HintPath>
+      <Private>True</Private>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.Memory.4.5.5\lib\net461\System.Memory.dll</HintPath>
     </Reference>
@@ -208,9 +214,11 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\PhenoController.cs" />
+    <Compile Include="Controllers\ZipArchive.cs" />
     <Compile Include="DB\DB.cs" />
     <Compile Include="DB\ETCDA.cs" />
     <Compile Include="DB\ImageDA.cs" />
+    <Compile Include="DB\PhenoDA.cs" />
     <Compile Include="DB\UserDA.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
@@ -235,6 +243,7 @@
     <Compile Include="Models\Image.cs" />
     <Compile Include="Models\OverviewModel.cs" />
     <Compile Include="Models\Pager.cs" />
+    <Compile Include="Models\Pheno\PhenoCamera.cs" />
     <Compile Include="Models\Plot.cs" />
     <Compile Include="Models\PlotSet.cs" />
     <Compile Include="Models\Point.cs" />
@@ -247,6 +256,7 @@
     <Compile Include="Models\UploadSet.cs" />
     <Compile Include="Models\UploadSetQualityChecksModel.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\Pheno\Zipfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -457,11 +467,11 @@
     <Content Include="Views\Home\ProcessPPFDimages.cshtml" />
     <Content Include="Views\Shared\_LayoutAncil.cshtml" />
     <Content Include="Views\ETC\AncillaryReports.cshtml" />
+    <Content Include="Views\Pheno\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Uploads\" />
-    <Folder Include="Views\Pheno\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
