--- a/packages.config
+++ b/packages.config
@@ -13,6 +13,7 @@
   <package id="dropzone" version="4.3.0" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="Grid.Mvc" version="3.1.0-ci1036" targetFramework="net45" />
+  <package id="HtmlAgilityPack" version="1.12.4" targetFramework="net48" />
   <package id="jQuery" version="3.6.3" targetFramework="net48" />
   <package id="jQuery.UI.Combined" version="1.13.2" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.19.5" targetFramework="net48" />
